--- a/styles/style.css
+++ b/styles/style.css
@@ -8,14 +8,33 @@ html {
   block-size: 100%;
 }
 
+:root {
+  --white: #ffffff;
+  --black: #1b1919;
+  --gray: #545050;
+
+  --m-l: 30px;
+  --m-m: 26px;
+  --m-s: 16px;
+  --m-xs: 6px;
+  --m-xxs: 5px;
+  --m-xxxs: 1px;
+
+  --main-font: 'Fira Sans Condensed', sans-serif;
+  --second-font: 'Oswald', sans-serif;
+}
+
 .page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
-  color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
+  color: var(--white);
+  font-family: var(--main-font);
   font-size: 18px;
-  background-color: #1b1919;
+  background-color: var(--black);
 }
 
 h1,
@@ -35,4 +54,269 @@ fieldset {
 ul,
 ol {
   list-style: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  inline-size: var(--m-xxxs);
+  block-size: var(--m-xxxs);
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
+}
+
+.content {
+  display: flex;
+  column-gap: var(--m-l);
+  align-items: end;
+  width: 1140px;
+  margin: 0 auto;
+}
+
+.result {
+  width: 62.37%;
+  display: flex;
+  flex-direction: column;
+  gap: var(--m-s);
+}
+
+.result__video-container {
+  width: 100%;
+  height: 386px;
+}
+
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.search-form {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  row-gap: var(--m-s);
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  padding-bottom: 8px;
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 18px;
+  line-height: calc(21.6 / 18 * 100%);
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 19px;
+  height: 19px;
+  outline: var(--m-xxxs) solid var(--white);
+  cursor: pointer;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: "";
+  display: block;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  background-color: var(--white);
+  outline: var(--m-xxxs) solid var(--white);
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:active {
+  background-color: var(--gray);
+}
+
+.button:hover {
+  text-decoration: underline;
+}
+
+.button:focus-visible {
+  outline: var(--m-xxxs) solid var(--white);
+  outline-offset: var(--m-xxxs);
+}
+
+.button {
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: calc(21.6 / 18 * 100%);
+  background-color: transparent;
+  color: inherit;
+  border: var(--m-xxxs) solid var(--white);
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  padding: 6px 73.5px;
+  margin-top: 20px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  justify-content: space-between;
+  column-gap: var(--m-s);
+}
+
+.search-form__label {
+  display: flex;
+  align-items: center;
+  column-gap: var(--m-xxs);
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__label:focus {
+  outline: none;
+}
+
+.search-form__label:visited {
+  background-color: transparent;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: var(--m-xxxs) solid var(--white);
+}
+
+.search-form__textfield {
+  width: 225px;
+  background-color: transparent;
+  color: rgba(255, 255, 255, 0.7);
+  border: none;
+  border-top: var(--m-xxxs) solid var(--white);
+  border-bottom: var(--m-xxxs) solid var(--white);
+  font-family: var(--main-font);
+  font-weight: 400;
+  font-size: 18px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.search-form__textfield:active {
+  border: none;
+  outline: var(--m-xxxs) solid var(--white);
+}
+
+.search-form__textfield:focus {
+  border: none;
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  outline: var(--m-xxxs) solid var(--white);
+  outline-offset: 1px;
+}
+
+.content__details {
+  width: 35%;
+  max-height: 100%;
+  margin-top: auto;
+}
+
+.title {
+  padding-bottom: 22px;
+  font-family: var(--second-font);
+  font-weight: 700;
+  font-size: 75px;
+  line-height: calc(70.5 / 75 * 100%);
+  text-transform: uppercase;
+  color: var(--white);
+  background-color: var(--black);
+}
+
+.content__accent {
+  color: var(--gray);
+}
+
+.content__list {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden auto;
+  height: 298px;
+}
+
+.content__list::-webkit-scrollbar {
+  width: 0;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: var(--m-l);
+}
+
+.content__card-link_current {
+  background-color: var(--gray);
+  margin: var(--m-xxxs);
+}
+
+.content__card-link {
+  display: block;
+  color: var(--white);
+  text-decoration: none;
+}
+
+.content__card-link:active {
+  background-color: var(--gray);
+}
+
+.content__card-link:focus {
+  border: none;
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  outline: var(--m-xxxs) solid var(--white);
+}
+
+.content__card-link:hover {
+  text-decoration: underline;
+  text-underline-position: under;
+}
+
+.content__video-card {
+  display: grid;
+  grid-template-columns: 50.2% 48.8%;
+  grid-template-rows: 107px;
+  align-items: start;
+  justify-content: space-between;
+}
+
+.content__video-card-title {
+  padding-top: 4px;
+  padding-bottom: 6px;
+  font-family: var(--second-font);
+  font-size: 30px;
+  font-weight: 700;
+  line-height: calc(30 / 30 * 100%);
+  text-transform: uppercase;
+}
+
+.content__video-card-description {
+  font-family: var(--main-font);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 16px;
+}
+
+.content__video-card-thumbnail {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.more-button {
+  padding: var(--m-xs) 145px;
 }
